<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="vertical">
	
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/max_label" />
		
	<EditText
		android:id="@+id/maxLabel"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
	
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/min_label" />
	
	<EditText
		android:id="@+id/minLabel"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
		
	<TableLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:stretchColumns="*">
	
		<TableRow>
			<Button
				android:id="@+id/saveButton"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:text="@string/save" />
			<Button
				android:id="@+id/deleteButton"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:text="@string/delete" />
			<Button
				android:id="@+id/cancelButton"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:text="@string/cancel" />
		</TableRow>		
	</TableLayout>
</LinearLayout>
