<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="10dip"
	android:gravity="center">

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		android:layout_weight="1.0"
		android:gravity="center"
		android:orientation="vertical">


		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/main_intro_title"
		/>

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/main_into_text"
		/>

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dip"
			android:textStyle="bold"
			android:text="@string/main_intro_intructions"
		 />
	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		android:layout_marginLeft="5dip"
		android:orientation="vertical"
		android:gravity="bottom">

		<Button
			android:id="@+id/aboutButton"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/about_title"
			android:singleLine="true" />
	</LinearLayout>

</LinearLayout>