<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dip">
		
		<ScrollView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
				
			<RadioGroup
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
			
				<RadioButton
					android:id="@+id/reminderPreferenceNever"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/activity_reminder_preference_never" />
					
				<!-- <RadioButton
					android:id="@+id/reminderPreferenceHourly"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/activity_reminder_preference_hourly" />
					 -->
				<RadioButton
					android:id="@+id/reminderPreferenceDaily"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/activity_reminder_preference_daily" />
					
				<RadioButton
					android:id="@+id/reminderPreferenceWeekly"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/activity_reminder_preference_weekly" />	
					
				<RadioButton
					android:id="@+id/reminderPreferenceMonthly"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/activity_reminder_preference_monthly" />	
			</RadioGroup>
		</ScrollView>
	</LinearLayout>
</LinearLayout>
