<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<FrameLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1.0">

		<TextView
			android:id="@+id/noNotesMessage"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:text="@string/no_notes_yet" />

		<ListView
			android:id="@+id/list"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
		</ListView>
	</FrameLayout>

	<LinearLayout
		android:id="@+id/dialogButtons"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:visibility="gone">

		<Button
			android:id="@+id/addNoteButton"
			android:text="@string/add_note"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
		 />

		<Button
			android:id="@+id/closeButton"
			android:text="@string/close"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
		 />
	</LinearLayout>
</LinearLayout>
