<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:gravity="center_vertical">

	<TextView
		android:id="@+id/groupTitle"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
	/>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<FrameLayout
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_weight="1.0">

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="fill_parent">
				<ImageView
					android:id="@+id/background"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_gravity="left|center_vertical"
					android:scaleType="fitEnd"
					android:layout_marginLeft="80dip" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:layout_weight="1.0"
				android:gravity="center"
				android:orientation="vertical">

				<RelativeLayout
					android:paddingTop="2dip"
					android:paddingBottom="2dip"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content">

					<ImageButton
						android:id="@+id/formButton"
						android:layout_width="70dip"
						android:layout_height="70dip"
						android:src="@drawable/form_blue"
						android:scaleType="fitCenter"
						android:layout_marginRight="5dip" />

					<TextView
						android:id="@+id/text1"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceMedium"
						android:layout_toRightOf="@+id/formButton"
						android:text="@string/form_title"
					/>

					<TextView
						android:id="@+id/text2"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceSmall"
						android:layout_below="@+id/text1"
						android:layout_toRightOf="@+id/formButton"
						android:text="@string/form_desc"
					/>
				</RelativeLayout>


				<RelativeLayout
					android:paddingTop="2dip"
					android:paddingBottom="2dip"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content">

					<ImageButton
						android:id="@+id/resultsButton"
						android:layout_width="70dip"
						android:layout_height="70dip"
						android:src="@drawable/results_blue"
						android:scaleType="fitCenter"
						android:layout_marginRight="5dip" />

					<TextView
						android:id="@+id/text1"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceMedium"
						android:layout_toRightOf="@+id/resultsButton"
						android:text="@string/results_title"
					/>

					<TextView
						android:id="@+id/text2"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceSmall"
						android:text="@string/results_desc"
						android:layout_below="@+id/text1"
						android:layout_toRightOf="@+id/resultsButton"
					/>
				</RelativeLayout>
			</LinearLayout>
		</FrameLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_marginLeft="5dip"
			android:orientation="vertical"
			android:gravity="bottom">

			<Button
				android:id="@+id/editGroupButton"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/manage_group"
				android:singleLine="true" />

			<!-- <Button
				android:id="@+id/manageScalesButton"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/manage_scales"
				android:singleLine="true" />-->
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="right">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_marginRight="5dip"
			android:text="@string/last_rated_label" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:id="@+id/lastRatedDate" />
	</LinearLayout>

</LinearLayout>