<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="5dip">

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1.0">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical">

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textAppearance="@android:style/TextAppearance.Medium"
				android:text="@string/enter_your_pin" />
			<EditText
				android:id="@+id/pin"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:imeOptions="actionGo"
				android:inputType="number" />
				
			<Button
				android:id="@+id/forgotPinButton"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/forgot_pin" />
				
			<View
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				style="@style/divider" />
				
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:gravity="center_vertical"
				android:orientation="vertical">

				<TextView
					android:id="@+id/startupTips"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:layout_marginTop="10dip"
					android:layout_marginBottom="10dip" />
	
				<CheckBox
					android:id="@+id/showTipsCheckbox"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/show_tips_on_startup" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>